--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -8,20 +8,14 @@
             {{task.is_urgent}}
             {{task.due_date}}
         {% endfor %}
-        
+
 <ul class="collapsible">
+    {% for task in tasks %}
     <li>
-      <div class="collapsible-header"><i class="material-icons">filter_drama</i>First</div>
-      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+      <div class="collapsible-header"><i class="material-icons">filter_drama</i>{{task.task_name}} - {{task.due_date}}</div>
+      <div class="collapsible-body"><span>{{task.task_description}}</span></div>
     </li>
-    <li>
-      <div class="collapsible-header"><i class="material-icons">place</i>Second</div>
-      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-    </li>
-    <li>
-      <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
-      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-    </li>
-  </ul>
+    {% endfor %}
+</ul>
 
 {% endblock %}
