--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,11 @@
         $(document).ready(function(){
             $('.collapsible').collapsible();
         });
+
+        $(document).ready(function(){
+            $('.datepicker').datepicker();
+        });
+
         </script>
     </body>
 </html>
