Datepicker does not work - tried several options, checked versions, changed scripts

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,10 +16,10 @@
             $('.collapsible').collapsible();
         });
 
-        $(document).ready(function(){
-            $('.datepicker').datepicker();
+        document.getElementById("matfix").addEventListener("click", function(e) {
+	        e.stopPropagation();
         });
-
         </script>
+       
     </body>
 </html>
