--- a/templates/base.html
+++ b/templates/base.html
@@ -16,10 +16,19 @@
             $('.collapsible').collapsible();
         });
 
-        document.getElementById("matfix").addEventListener("click", function(e) {
-	        e.stopPropagation();
+        $('.datepicker').pickadate({
+            selectMonths: true, // Creates a dropdown to control month
+            selectYears: 15, // Creates a dropdown of 15 years to control year,
+            today: 'Today',
+            clear: 'Clear',
+            close: 'Ok',
+            closeOnSelect: false // Close upon selecting a date,
         });
-        </script>
+
+        document.getElementById("matfix").addEventListener("click", function(e) {
+            e.stopPropagation();
+        });
+     </script>
        
     </body>
 </html>
